--- a/Modulo_rampeo/1-Ramp_Up/Python/Repaso/yo/Ejercicio de repaso - Funciones y clases.ipynb
+++ b/Modulo_rampeo/1-Ramp_Up/Python/Repaso/yo/Ejercicio de repaso - Funciones y clases.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,17 +125,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[53, 'Caracas', 1.7, True, None, ['Italia', 'Suiza', 'Inglaterra', 'Egipto', 'EEUU'], ('Carpa', 'Cuchillos', 'Cubo'), {'marca': 'lenovo', 'ram': 16}] 8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#10. Guarda en la variable `lon_lista_examen` la longitud de `lista_examen`.\n",
     "lon_lista_examen = len(lista_examen)\n",
@@ -181,17 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inglaterra\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#1. Guardar en las variables, sin uso de funciones (puedes usar print) ni bucles: \n",
     "# `res21` El tercer destino de vacaciones\n",
@@ -202,17 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cuchillos\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# `res22` El penúltimo objeto que te llevarías a una isla para todo tipo de longitudes de listados.\n",
     "res22 = lista_examen[6][-2]\n",
@@ -222,17 +198,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Car\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# `res23` Los 3 primeros caracteres de la población de nacimiento.\n",
     "mi_poblacion_nacimiento = lista_examen[1]\n",
@@ -243,17 +211,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['lenovo', 16]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# `res24` Una lista de los valores del diccionario de tu pc.\n",
     "res24 = list(lista_examen[7].values())\n",
@@ -263,17 +223,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[True, False, True]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# `res25` Guardar dentro del diccionario dentro de `lista_examen` una \n",
     "#nueva clave llamada `s_operativo` con una lista de 3 booleanos, True si es Windows, de tus últimos 3 pcs.\n",
@@ -284,20 +236,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Posición: 1 Elemento de la lista: Caracas\n",
-      "Posición: 3 Elemento de la lista: True\n",
-      "Posición: 5 Elemento de la lista: ['Italia', 'Suiza', 'Inglaterra', 'Egipto', 'EEUU']\n",
-      "Posición: 7 Elemento de la lista: {'marca': 'lenovo', 'ram': 16, 's_operativo': [True, False, True]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Mostrar por pantalla, con uso de un bucle `for`:\n",
     "# Las posiciones y elementos de `lista_examen` de las posiciones impares.\n",
@@ -310,27 +251,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'marca': 'lenovo', 'ram': 16, 's_operativo': [True, False, True]},\n",
-       " ('Carpa', 'Cuchillos', 'Cubo'),\n",
-       " ['Italia', 'Suiza', 'Inglaterra', 'Egipto', 'EEUU'],\n",
-       " None,\n",
-       " True,\n",
-       " 1.7,\n",
-       " 'Caracas',\n",
-       " 53]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Todos los elementos de `lista_examen` al revés.\n",
     "\n",
@@ -340,21 +263,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'NoneType'> None\n",
-      "<class 'bool'> True\n",
-      "<class 'float'> 1.7\n",
-      "<class 'str'> Caracas\n",
-      "<class 'int'> 53\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Todos aquellos elementos que sean colecciones ordenadas de `lista_examen`, si no lo son, imprimir el tipo.\n",
     "for elemento in lista_examen:\n",
@@ -368,18 +279,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nueva lista =  ['Italia', 'Suiza', 'Inglaterra']\n",
-      "Lista de borrados =  ['EEUU', 'Egipto']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Con uso del bucle `while`, borra los destinos por la cola hasta que tengas 3 destinos, y guarda esos \n",
     "#destinos borrados en una nueva lista `destinos_borrados`.\n",
@@ -428,17 +330,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1º solicitud la cuota mensual es: 4166\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Crear un programa que calcule la cuota de una hipoteca\n",
     "\"\"\"\n",
@@ -465,26 +359,23 @@
     "i_anual = float(input(\"Ingrese el tipo de interés anual (%): \"))\n",
     "plazo_anos = int(input(\"Ingrese el plazo en años: \"))\n",
     "\n",
+    "#aqui calculamos los meses a calcular y el interes mensual\n",
     "n_meses = plazo_anos * 12\n",
     "i_men = i_anual / 100 / 12\n",
     "\n",
     "cuota = round((v * ((1+i_men)**n_meses * i_men) / (1+i_men)**n_meses -1))\n",
-    "print(f\"(1º solicitud la cuota mensual es: {cuota}\")\n"
+    "total_pagar = cuota * n_meses + v\n",
+    "\n",
+    "print(f\"(1º solicitud la cuota mensual es: {cuota}\")\n",
+    "print(f\"(Total monto a pagar a {total_pagar}\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2º solicitud con funsion, la cuota mensual es: 41666\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "2. Crea una función `calcular_hip` que realiza el cálculo y cuyos argumentos de \n",
@@ -493,35 +384,27 @@
     "\"\"\"\n",
     "\n",
     "#mi codigo\n",
-    "def calcular_hip(volumen, interes_anual, plazo_anos = 30):\n",
+    "def calcular_hip(v, i_anual, plazo_anos = 30):\n",
     "    n_meses = plazo_anos * 12\n",
     "    i_men = i_anual / 100 / 12\n",
     "\n",
-    "    cuota_2 = round((v * ((1+i_men)**n_meses * i_men) / (1+i_men)**n_meses -1))\n",
-    "    print(f\"(2º solicitud con funsion, la cuota mensual es: {cuota_2}\")\n",
+    "    cuota = round((v * ((1+i_men)**n_meses * i_men) / (1+i_men)**n_meses -1))\n",
+    "    print(f\"(2º solicitud con funsion, la cuota mensual es: {cuota}\")\n",
     "\n",
     "v = float(input(\"Ingrese el volumen del préstamo hipotecario: \"))\n",
     "i_anual = float(input(\"Ingrese el tipo de interés anual (%): \"))\n",
-    "plazo_anos = int(input(\"Ingrese el plazo en años: \"))\n",
+    "\n",
     "if plazo_anos == 0:\n",
     "    plazo_anos == 30\n",
-    "calcular_hip(v, i_anual, plazo_anos)\n",
+    "calcular_hip(v, i_anual)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3º solicitud con funsion, la cuota mensual es: 1457\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "3. Calcula la cuota y guárdala en la variable `res_cuota` si la cantidad de la hipoteca son 350000 euros, \n",
@@ -530,7 +413,7 @@
     "\n",
     "\n",
     "#mi codigo\n",
-    "def calcular_hip(volumen, interes_anual, plazo_anos = 30):\n",
+    "def calcular_hip(v, i_anual, plazo_anos = 30):\n",
     "    n_meses = plazo_anos * 12\n",
     "    i_men = i_anual / 100 / 12\n",
     "\n",
@@ -546,17 +429,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "El valor del porcentaje de gasto en la hipoteca respecto a los ingresos es: 0.2001923076923077\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "4. Crea una función `gasto_vivienda`, con dos argumentos de entrada `ingreso` y `lista_hip`. Esta lista tendrá \n",
@@ -566,7 +441,7 @@
     "\"\"\"\n",
     "\n",
     "#mi codigo\n",
-    "def calcular_hip(volumen, interes_anual, plazo_anos = 30):\n",
+    "def calcular_hip(v, i_anual, plazo_anos = 30):\n",
     "    n_meses = plazo_anos * 12\n",
     "    i_men = i_anual / 100 / 12\n",
     "\n",
@@ -590,24 +465,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "El valor del porcentaje de gasto en la hipoteca respecto a los ingresos es: 0.8570588235294118\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "5. Calcula el porcentaje de gasto en la hipoteca si el ingreso es de 1700 euros y guárdalo \n",
     "    en la variable `res_porcentaje`.\n",
     "\"\"\"\n",
     "#mi codigo\n",
-    "def calcular_hip(volumen, interes_anual, plazo_anos = 30):\n",
+    "def calcular_hip(v, i_anual, plazo_anos = 30):\n",
     "    n_meses = plazo_anos * 12\n",
     "    i_men = i_anual / 100 / 12\n",
     "\n",
@@ -635,10 +502,13 @@
    "source": [
     "### Ejercicio 4 \n",
     "\n",
-    "1. Crea una clase `Cliente` que tenga 1 atributo general `mamífero`(bool True) y 6 atributos en el constructor: `ojos`(int default 2), `altura`(float), `edad`(int), `ahorros`(float), `target`(bool default True) y `nombre`(str). Además, debe contar con dos métodos: \n",
+    "1. Crea una clase `Cliente` que tenga 1 atributo general `mamífero`(bool True) y 6 atributos en el constructor: `ojos`(int default 2), `altura`(float), `edad`(int), `ahorros`(float), `target`(bool default True) y `nombre`(str). \n",
     "\n",
-    "- `cumplir_edad()`: al llamar a este método se debe sumar 1 al atributo edad del cliente y que retorne \"Felices x años!\" con la edad actualizada. Si cumple 80, su altura pasará a ser el 90% de su altura original.\n",
-    "- `comprar()` que recibe el argumento de `volumen_gasto`(list): este método debe actualizar el atributo de ahorros, restándole el volumen del gasto total, retornando esos ahorros actualizados. Si el cliente tiene 0 ahorros o menos, deberá de cambiar el atributo `target` a False.\n",
+    "- Además, debe contar con dos métodos: \n",
+    "\n",
+    "    - `cumplir_edad()`: al llamar a este método se debe sumar 1 al atributo edad del cliente y que retorne \"Felices x años!\" con la edad actualizada. Si cumple 80, su altura pasará a ser el 90% de su altura original.\n",
+    "\n",
+    "    - `comprar()` que recibe el argumento de `volumen_gasto`(list): este método debe actualizar el atributo de ahorros, restándole el volumen del gasto total, retornando esos ahorros actualizados. Si el cliente tiene 0 ahorros o menos, deberá de cambiar el atributo `target` a False.\n",
     "\n",
     "2. (a partir de la variable **`lista_examen`**) Crea un cliente instanciandolo en el objeto `cliente_1` llamado \"Manuel\" que tiene el doble de tu de edad y mide 10 centímetros menos que tu altura. Tiene unos ahorros de 3000 euros, y al ser un cliente con capacidad de gasto en nuestro negocio, queremos fidelizarlo en nuestra campaña, el valor `target` será True el resto de atributos puedes elegir un valor.\n",
     "\n",
@@ -647,6 +517,89 @@
     "4. Haz que cumplan años tus dos clientes. Les quieres fidelizar, por lo que les mandas una oferta comercial de productos. Manuel compra 3 productos de 1000, 400 y 2000 euros mientras que Laura compra solo 1 producto de 1000. Comprueba el valor de los atributos `edad` , `ahorros` y `target` de ambos clientes.\n",
     "\n",
     "5. Documenta la clase con el estilo de Google\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manuel 79 3000.0 1.9 2 True\n",
+      "Laura 28 2000.0 1.7 2 True\n",
+      "Felices 80 años!\n",
+      "None\n",
+      "Felices 29 años!\n",
+      "None\n",
+      "Manuel 80 1.71\n",
+      "Laura 29 1.7\n",
+      "este es el volumen de gasto: [1000, 400, 2000]\n",
+      "None\n",
+      "este es el volumen de gasto: 1000\n",
+      "None\n",
+      "Manuel 80 3000.0 True\n",
+      "Laura 29 2000.0 True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class cliente:\n",
+    "    mamifero = True\n",
+    "        \n",
+    "    def __init__(self, nombre, edad, altura,  ahorros, ojos = 2, target = True):\n",
+    "        self.ojos = int(ojos)\n",
+    "        self.altura = float(altura)\n",
+    "        self.edad = int(edad)\n",
+    "        self.ahorros = float(ahorros)\n",
+    "        self.target = target\n",
+    "        self.nombre = str(nombre)\n",
+    "        \n",
+    "        \n",
+    "    def cumplir_edad(self):\n",
+    "        \n",
+    "        self.edad += 1\n",
+    "        \n",
+    "        if self.edad >= 80:\n",
+    "            self.altura = (self.altura * 90)/100\n",
+    "            \n",
+    "        return print(f\"Felices {self.edad} años!\")\n",
+    "    \n",
+    "    def comprar(self, volumen_gasto): #volumen_gasto - lista\n",
+    "        print(f\"este es el volumen de gasto: {volumen_gasto}\")\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "\n",
+    "cliente_1 = cliente(\"Manuel\", 79, 1.90, 3000)\n",
+    "cliente_2 = cliente(\"Laura\", 28, 1.70, 2000)\n",
+    "\n",
+    "print(cliente_1.nombre, cliente_1.edad, cliente_1.ahorros, cliente_1.altura, cliente_1.ojos, cliente_1.mamifero)\n",
+    "print(cliente_2.nombre, cliente_2.edad, cliente_2.ahorros, cliente_2.altura, cliente_2.ojos, cliente_2.mamifero)\n",
+    "\n",
+    "print(cliente_1.cumplir_edad())\n",
+    "print(cliente_2.cumplir_edad())\n",
+    "print(cliente_1.nombre, cliente_1.edad, cliente_1.altura)\n",
+    "print(cliente_2.nombre, cliente_2.edad, cliente_2.altura)\n",
+    "\n",
+    "compra_cliente1 = [1000, 400, 2000]\n",
+    "print(cliente_1.comprar(compra_cliente1))\n",
+    "print(cliente_2.comprar(1000))\n",
+    "      \n",
+    "print(cliente_1.nombre, cliente_1.edad, cliente_1.ahorros, cliente_1.target)\n",
+    "print(cliente_2.nombre, cliente_2.edad, cliente_2.ahorros, cliente_2.target)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_examen"
    ]
   },
   {
@@ -673,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4,
   "vscode": {
