--- a/Modulo_rampeo/1-Ramp_Up/examen/Examen_Ramp_Up_solucion.ipynb
+++ b/Modulo_rampeo/1-Ramp_Up/examen/Examen_Ramp_Up_solucion.ipynb
@@ -108,6 +108,7 @@
         "\n",
         "        num_pares = 0\n",
         "        num_impares = 0\n",
+        "        \n",
         "        for char in num_str:\n",
         "            if int(char) % 2 == 0:\n",
         "                num_pares += 1\n",
@@ -232,8 +233,7 @@
         "    num_impares = []\n",
         "    \n",
         "    for elem in lista:\n",
-        "        if elem <0:\n",
-        "            continue\n",
+        "c\n",
         "        \n",
         "        if elem % 2 == 0:\n",
         "            num_pares.append(elem)\n",
@@ -280,11 +280,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def direcciones():\n",
+        "def direccionesA():\n",
         "\n",
         "    direccion = input(\"Introduzca su dirección\")\n",
         "    print(direccion)\n",
@@ -309,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -337,21 +337,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "sdasdasdasdasd\n",
-            "La dirección está compuesta por 1 palabras de las cuales 0 son números.\n"
+            "asdañsldñasldñasmdamasdac.,,aasdasd 2\n",
+            "La dirección está compuesta por 3 palabras de las cuales 1 son números.\n"
           ]
         }
       ],
       "source": [
-        "direcciones()"
+        "direccionesA()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
