--- a/2-Data Analysis/2-Dataframes y estadística/Teoría/1-Intro_Pandas.ipynb
+++ b/2-Data Analysis/2-Dataframes y estadística/Teoría/1-Intro_Pandas.ipynb
@@ -2295,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 208,
    "id": "54963924-fce4-4e82-be08-ebfe97f1a24c",
    "metadata": {
     "collapsed": false,
@@ -2389,7 +2389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 206,
    "id": "75672d5e-4aeb-44dc-a46c-36a46e0bb13e",
    "metadata": {
     "collapsed": false,
@@ -2404,7 +2404,7 @@
        "Index([0, 3, 5, 7, 9], dtype='int64')"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2415,7 +2415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 207,
    "id": "f1867ad0-7bd9-4cc3-a027-86b156f980f0",
    "metadata": {
     "collapsed": false,
@@ -2430,7 +2430,7 @@
        "Index([3, 3, 5, 7, 11], dtype='int64')"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2792,7 +2792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 203,
    "id": "48051217-a887-4f24-b620-9ed6cdb8e28b",
    "metadata": {
     "collapsed": false,
@@ -2803,13 +2803,69 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area</th>\n",
+       "      <th>pop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>California</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Texas</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>New York</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Florida</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Illinois</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "b    0.50\n",
-       "c    0.75\n",
-       "dtype: float64"
+       "            area  pop\n",
+       "California   NaN  NaN\n",
+       "Texas        NaN  NaN\n",
+       "New York     NaN  NaN\n",
+       "Florida      NaN  NaN\n",
+       "Illinois     NaN  NaN"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
