1er parte del 15 mayo

--- a/2-Data Analysis/2-Dataframes y estadística/Practica/0-Occupation/Occupation.ipynb
+++ b/2-Data Analysis/2-Dataframes y estadística/Practica/0-Occupation/Occupation.ipynb
@@ -18,10 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "pd.unique\n"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# https://raw.githubusercontent.com/justmarkham/DAT8/master/data/u.user\n",
+    "urls = \"https://raw.githubusercontent.com/justmarkham/DAT8/master/data/u.user\"\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,10 +55,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    user_id  age gender     occupation zip_code\n",
+      "0         1   24      M     technician    85711\n",
+      "1         2   53      F          other    94043\n",
+      "2         3   23      M         writer    32067\n",
+      "3         4   24      M     technician    43537\n",
+      "4         5   33      F          other    15213\n",
+      "5         6   42      M      executive    98101\n",
+      "6         7   57      M  administrator    91344\n",
+      "7         8   36      M  administrator    05201\n",
+      "8         9   29      M        student    01002\n",
+      "9        10   53      M         lawyer    90703\n",
+      "10       11   39      F          other    30329\n",
+      "11       12   28      F          other    06405\n",
+      "12       13   47      M       educator    29206\n",
+      "13       14   45      M      scientist    55106\n",
+      "14       15   49      F       educator    97301\n",
+      "15       16   21      M  entertainment    10309\n",
+      "16       17   30      M     programmer    06355\n",
+      "17       18   35      F          other    37212\n",
+      "18       19   40      M      librarian    02138\n",
+      "19       20   42      F      homemaker    95660\n",
+      "20       21   26      M         writer    30068\n",
+      "21       22   25      M         writer    40206\n",
+      "22       23   30      F         artist    48197\n",
+      "23       24   21      F         artist    94533\n",
+      "24       25   39      M       engineer    55107\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print(users.head(25))\n",
+    "\n",
+    "# Importar el dataset\n",
+    "users = pd.read_csv(urls, delimiter='|')\n",
+    "print(users.head(25))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,10 +108,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Usando slicing:\n",
+      "    user_id  age gender     occupation zip_code\n",
+      "0         1   24      M     technician    85711\n",
+      "1         2   53      F          other    94043\n",
+      "2         3   23      M         writer    32067\n",
+      "3         4   24      M     technician    43537\n",
+      "4         5   33      F          other    15213\n",
+      "5         6   42      M      executive    98101\n",
+      "6         7   57      M  administrator    91344\n",
+      "7         8   36      M  administrator    05201\n",
+      "8         9   29      M        student    01002\n",
+      "9        10   53      M         lawyer    90703\n",
+      "10       11   39      F          other    30329\n",
+      "11       12   28      F          other    06405\n",
+      "12       13   47      M       educator    29206\n",
+      "13       14   45      M      scientist    55106\n",
+      "14       15   49      F       educator    97301\n",
+      "15       16   21      M  entertainment    10309\n",
+      "16       17   30      M     programmer    06355\n",
+      "17       18   35      F          other    37212\n",
+      "18       19   40      M      librarian    02138\n",
+      "19       20   42      F      homemaker    95660\n",
+      "20       21   26      M         writer    30068\n",
+      "21       22   25      M         writer    40206\n",
+      "22       23   30      F         artist    48197\n",
+      "23       24   21      F         artist    94533\n",
+      "24       25   39      M       engineer    55107\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Usando slicing:\")\n",
+    "print(users[:25])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,10 +159,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     user_id  age gender     occupation zip_code\n",
+      "918      919   25      M          other    14216\n",
+      "919      920   30      F         artist    90008\n",
+      "920      921   20      F        student    98801\n",
+      "921      922   29      F  administrator    21114\n",
+      "922      923   21      M        student    E2E3R\n",
+      "923      924   29      M          other    11753\n",
+      "924      925   18      F       salesman    49036\n",
+      "925      926   49      M  entertainment    01701\n",
+      "926      927   23      M     programmer    55428\n",
+      "927      928   21      M        student    55408\n",
+      "928      929   44      M      scientist    53711\n",
+      "929      930   28      F      scientist    07310\n",
+      "930      931   60      M       educator    33556\n",
+      "931      932   58      M       educator    06437\n",
+      "932      933   28      M        student    48105\n",
+      "933      934   61      M       engineer    22902\n",
+      "934      935   42      M         doctor    66221\n",
+      "935      936   24      M          other    32789\n",
+      "936      937   48      M       educator    98072\n",
+      "937      938   38      F     technician    55038\n",
+      "938      939   26      F        student    33319\n",
+      "939      940   32      M  administrator    02215\n",
+      "940      941   20      M        student    97229\n",
+      "941      942   48      F      librarian    78209\n",
+      "942      943   22      M        student    77841\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(users.tail(25))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -90,10 +209,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número total de registros: 943\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_records = users.shape[0]\n",
+    "\n",
+    "print(\"Número total de registros:\", num_records)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,10 +236,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número total de columnas: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_columns = users.shape[1]\n",
+    "\n",
+    "#revisar video con le metodo count\n",
+    "\n",
+    "print(\"Número total de columnas:\", num_columns)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,10 +264,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user_id\n",
+      "age\n",
+      "gender\n",
+      "occupation\n",
+      "zip_code\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Imprimir cada uno de los nombres de las columnas\n",
+    "for column_name in users.columns:\n",
+    "    print(column_name)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,10 +295,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Índice:\n",
+      "RangeIndex(start=0, stop=943, step=1)\n",
+      "\n",
+      "Nombres de las columnas:\n",
+      "Index(['user_id', 'age', 'gender', 'occupation', 'zip_code'], dtype='object')\n",
+      "\n",
+      "Valores:\n",
+      "[[1 24 'M' 'technician' '85711']\n",
+      " [2 53 'F' 'other' '94043']\n",
+      " [3 23 'M' 'writer' '32067']\n",
+      " ...\n",
+      " [941 20 'M' 'student' '97229']\n",
+      " [942 48 'F' 'librarian' '78209']\n",
+      " [943 22 'M' 'student' '77841']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Acceder al índice\n",
+    "indice = users.index\n",
+    "\n",
+    "# Acceder a los nombres de las columnas\n",
+    "nombres_columnas = users.columns\n",
+    "\n",
+    "# Acceder a los valores\n",
+    "valores = users.values\n",
+    "\n",
+    "# Imprimir los resultados\n",
+    "print(\"Índice:\")\n",
+    "print(indice)\n",
+    "print(\"\\nNombres de las columnas:\")\n",
+    "print(nombres_columnas)\n",
+    "print(\"\\nValores:\")\n",
+    "print(valores)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -263,10 +463,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    user_id  age gender     occupation zip_code\n",
+      "0         1   24      M     technician    85711\n",
+      "1         2   53      F          other    94043\n",
+      "2         3   23      M         writer    32067\n",
+      "3         4   24      M     technician    43537\n",
+      "4         5   33      F          other    15213\n",
+      "5         6   42      M      executive    98101\n",
+      "6         7   57      M  administrator    91344\n",
+      "7         8   36      M  administrator    05201\n",
+      "8         9   29      M        student    01002\n",
+      "9        10   53      M         lawyer    90703\n",
+      "10       11   39      F          other    30329\n",
+      "11       12   28      F          other    06405\n",
+      "12       13   47      M       educator    29206\n",
+      "13       14   45      M      scientist    55106\n",
+      "14       15   49      F       educator    97301\n",
+      "15       16   21      M  entertainment    10309\n",
+      "16       17   30      M     programmer    06355\n",
+      "17       18   35      F          other    37212\n",
+      "18       19   40      M      librarian    02138\n",
+      "19       20   42      F      homemaker    95660\n",
+      "20       21   26      M         writer    30068\n",
+      "21       22   25      M         writer    40206\n",
+      "22       23   30      F         artist    48197\n",
+      "23       24   21      F         artist    94533\n",
+      "24       25   39      M       engineer    55107\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Importar el dataset y guardar en la variable users\n",
+    "url = \"https://raw.githubusercontent.com/justmarkham/DAT8/master/data/u.user\"\n",
+    "users = pd.read_csv(url)\n",
+    "\n",
+    "users = pd.read_csv(urls, delimiter='|')\n",
+    "print(users.head(25))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La edad menos frecuente es: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calcular la edad menos frecuente\n",
+    "edades, conteos = np.unique(users['age'], return_counts=True)\n",
+    "indice_edad_menos_frecuente = np.argmin(conteos)\n",
+    "edad_menos_frecuente = edades[indice_edad_menos_frecuente]\n",
+    "\n",
+    "print(\"La edad menos frecuente es:\", edad_menos_frecuente)"
+   ]
   }
  ],
  "metadata": {
@@ -286,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.3"
   },
   "vscode": {
    "interpreter": {
