--- a/2-Data Analysis/2-Dataframes y estadística/Teoría/2-Null_Values.ipynb
+++ b/2-Data Analysis/2-Dataframes y estadística/Teoría/2-Null_Values.ipynb
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -800,18 +800,19 @@
        "dtype: object"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "data = pd.Series([1, np.nan, 'hello', None])\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -820,6 +821,11 @@
    },
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "### aqui eliminas los datos nulos en el archivo fisico\n",
+    "\n",
     "# data.dropna()\n",
     "data.dropna(inplace=True)\n",
     "# data = data.dropna()"
@@ -827,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +844,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -922,7 +928,7 @@
        "2  NaN  4.0  6"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1038,7 @@
        "2  NaN  4.0  6"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1093,7 +1099,7 @@
        "1  2.0  3.0  5"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1168,7 +1174,7 @@
        "2  6"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1192,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1260,7 +1266,7 @@
        "2  NaN  4.0  6 NaN"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1272,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1336,7 +1342,7 @@
        "2  NaN  4.0  6"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1355,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1424,7 @@
        "2  NaN  4.0  6 NaN"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1429,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1476,18 +1482,19 @@
        "1  2.0  3.0  5 NaN"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df\n",
     "df.dropna(axis='rows', thresh=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1496,7 +1503,7 @@
        "3.0"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1507,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1559,7 +1566,7 @@
        "1  2.0  3.0  5 NaN"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1570,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1628,7 @@
        "2  6"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1654,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1673,13 +1680,13 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.Series([1, np.nan, 2, None, 3], index=list('abcde'))\n",
+    "data = pd.Series([1, np.nan, 2, None, 3], index=list('abcde')) #index=list te permite formatear las filas\n",
     "data"
    ]
   },
@@ -1693,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1712,7 +1719,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1723,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1737,7 +1744,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1756,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1770,7 +1777,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1781,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1789,6 +1796,14 @@
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\amejo\\AppData\\Local\\Temp\\ipykernel_15236\\3316037056.py:2: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  data.fillna(method='ffill')\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -1800,14 +1815,40 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# forward-fill\n",
+    "# forward-fill  aqui colocas en los nulos el valor anterior\n",
     "data.fillna(method='ffill')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    1.0\n",
+       "b    NaN\n",
+       "c    2.0\n",
+       "d    NaN\n",
+       "e    3.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.Series([1, np.nan, 2, None, 3], index=list('abcde')) #index=list te permite formatear las filas\n",
+    "data"
    ]
   },
   {
@@ -1820,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1828,6 +1869,14 @@
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\amejo\\AppData\\Local\\Temp\\ipykernel_15236\\2157629362.py:2: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  data.fillna(method='bfill')\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -1839,13 +1888,13 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# back-fill\n",
+    "# back-fill aqui colocas en los nulos el valor siguiente\n",
     "data.fillna(method='bfill')"
    ]
   },
@@ -1859,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1927,7 +1976,7 @@
        "2  NaN  4.0  6 NaN"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2035,21 +2084,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    NaN\n",
+      "1    3.0\n",
+      "2    4.0\n",
+      "Name: 1, dtype: float64\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "3.5"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(df[1])\n",
+    "\n",
     "df[1].mean()"
    ]
   },
@@ -2500,7 +2561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.3"
   },
   "vscode": {
    "interpreter": {
