correciones, nueva clase de agrupaciones y ploter

--- a/2-Data Analysis/3-Visualización/1-Matplotlib/1 - Intro.ipynb
+++ b/2-Data Analysis/3-Visualización/1-Matplotlib/1 - Intro.ipynb
@@ -116,12 +116,12 @@
    },
    "outputs": [],
    "source": [
-    "plt.style.use('classic')"
+    "plt.style.use('_classic_test_patch')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "4b4fbf5e-d3c9-4117-a97d-8aa132fadef1",
    "metadata": {},
    "outputs": [
@@ -1492,7 +1492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.3"
   },
   "vscode": {
    "interpreter": {
